Implement method to get a file by name in the FileRepository